css/style_reservia.css
/***** Common elements *****/
@font-face{ 
  font-family: "Railway";
  src: url("../fonts/Railway-webfont.eot");
  src: url("../fonts/Railway-webfont.svg") format("woff"),
       url("../fonts/Railway-webfont.ttf") format("truetype"),
       url("../fonts/Railway-webfont.svg") format("svg");
}

*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html{
  font-family: "Railway", sans-serif;
}

header, body > section, main, footer > div{
  margin: auto;
  max-width: 1200px;
  width: 100%;
}

a{
  font-size: 1em;
	font-style: normal;
  text-decoration: none;
}

h2{
  font-size: 1.3em;
  font-weight: 500;
}

h1{
  font-size: 1.5em;
  font-weight: 500;
}

.reg-text {
  font-style: normal;
  font-size: 1em;
  padding: 0.2em 0.2em;
}

/****** DESKTOP STYLE ******/

/****** Header style ******/
header{
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-areas: "logo . . nav inscription";
  justify-content: center;
}

header img{
  grid-area: logo;
  height: auto;
  padding: 1em 0;
  width: 50%; 
}

header nav{
  display: flex;
  grid-area: nav;
  justify-content: space-between;
}

header button{
  background: transparent;
  border: none;
  border-top: solid 0.2em transparent;
  color: #0065FC;
  display: flex;
  font-size: 1em;
  font-weight: bold;
  grid-area: inscription;
  height: 1.5em;
  justify-self: center;
  padding: 1.5em 1.75em;
  width: 125px;
}

header nav a{
  border-top: solid 0.2em transparent;
  color: #0065FC;
  display: flex;
  font-size: 1em;
  height: 1.5em;
  justify-content: center;
  padding: 1.5em 1.75em;
  width: 160px;
}

header nav a:nth-child(1){
  border-top: solid 0.2em #0065FC;
}

header nav a:nth-child(2){
  border-top: solid 0.2em transparent;
  color: #000;
}

header nav a:hover{
  border-top: solid 0.2em #0065FC;
}

/***** Filters section *****/
body section{
  display: flex;
  flex-direction: column;
  padding: 1em 0;
}

/* Search bar */
#search{
  display: flex;
  flex-direction: row;
  height: 2.5em;
  margin: 1em 0;
}

#search button:nth-child(1){
  align-items: center;
  background-color: #F2F2F2;
  border: 0.1em solid #F2F2F2;
  border-top-left-radius: 1em;
  border-bottom-left-radius: 1em;
  display: flex;
  padding: 0 1em;
}

#search input{
  border: 0.1em solid #F2F2F2;
  border-right: 0.1em solid transparent;
  min-width: 270px;
  padding-left: 1em;
}

.search-text, #search button:nth-child(3){
  align-items: center;
  background-color: #0065FC;
  border: 0.1em solid #0065FC;
  border-bottom-right-radius: 1em;
  border-top-right-radius: 1em;
  color: #FFF;
  display: flex;
  font-weight: normal;
  padding: 1em;
}

.search-text{
  position: relative;
  right: 50px;
}

.search-icon{
  display: none;
  overflow: hidden;
  visibility: hidden;
}

#filter-options{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

#filter-options span{
  align-self: center;
}

/* Filter buttons */
#filter-options a{
  border: 0.1em solid #F2F2F2;
  border-radius: 2em;
  padding: 0.6em 0;
  margin: 1.5em;
}

.icon{
  background-color: #DEEBFF;
  border: 0.1em solid #DEEBFF;
  border-radius: 50%;
  color: #0065FC;
  left: -0.2em;
  padding: 0.6em;
  position: relative;
}

.filter-button{
  color: #000;
  font-size: 1em;
  font-weight: normal;
  padding-right: 1.5em;
  text-decoration: none;
}

#filter-options a:hover{
  background-color: #0065FC;
  border: 0.1em solid transparent;
  color: #FFF;
  transition: 700ms ease;
}

#filter-options a:hover .filter-button{
  color: #FFF;
  transition: 700ms ease;
}

#filter-options a:hover .icon{
  background-color: #F2F2F2;
  border: 0.1em solid #F2F2F2;
  border-radius: 50%;
  color: #000;
  left: -0.2em;
  padding: 0.6em;
  position: relative;
  transition: 700ms ease;
}

.mini-icon{
  background-color: #FFF;
  border: 0.1em solid #F2F2F2;
  border-radius: 50%;
  color: #0065FC;
  font-size: 0.75em;
  margin-right: 0.5em;
  padding: 0.5em 0.8em 0.3em 0.9em;
}

/***** Main content *****/

/* aside: populars*/

main > div{
  display: grid;
  grid-gap: 1.5em;
  grid-template-areas: "places places populars"
                       "places places populars";
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, auto);
  justify-items: stretch;
  width: 100%;
}

aside{
  background-color: #F2F2F2;
  border-radius: 1.5em;
  grid-area: populars;
  padding: 1.5em;
}

aside > div{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 1em 0;
}

aside > div span{
  font-size: 1.5em;
}

aside > a > div{
  align-items: stretch;
  background-color: #FFF;
  border-radius: 1.5em;
  box-shadow: 0 0 1em #E9E9E9;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin: 1em 0;
  padding: 0.4em;
}

aside > a > div > img{
  border-bottom-left-radius: 1em;
  border-top-left-radius: 1em;
  display: flex;
  flex-direction: row;
  height: 140px;
  object-fit: cover;
  width: 130px;
}

.info-pop{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: 1em;
}

.place-pop{
  align-items: flex-start;
  padding-top: 1em;
}

.price-pop{
  align-items: flex-start;
  flex-grow: 1;
  padding-top: 0.5em;
}

/* Section: places*/

#places{
  align-self: stretch;
  background-color: #F2F2F2;
  border-radius: 1.5em;
  grid-area: places;
  margin: 0;
  padding: 1.5em;
}

#places h2, #activities h2{
  margin: 1em 0;
}

#places > a{
  color: #000;
  padding-top: 0.5em;
  text-decoration: none;
}

#places > div{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 0.5em 0;
}

#places > div > a, aside > a, footer div a{
  color: #000;
  text-decoration: none;
}

#places > div > a > div{
  background-color: #FFF;
  border-radius: 1.5em;
  box-shadow: 0 0 1em #E9E9E9;
  display: flex;
  flex-direction: column;
  padding: 0.4em;
}

#places > div > a > div img{
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
  display: flex;
  flex-direction: column;
  height: 110px;
  object-fit: cover;
  width: 220px;
}

.info-places{
  display: flex;
  flex-direction: column;
  padding: 0.5em;
}

.rank-place, .rank-pop{
  color: #0065FC;
  font-size: 0.8em;
  padding: 0.5em;
}

.empty-star{
  color: #B1B1B1;
}

/* Activities */
#activities{
  display: flex;
  flex-direction: column;
  width: 100%;
  margin: 1.5em 0 2em 0;
}

#block-activities{
  display: grid;
  grid-gap: 1.5em;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 210px);
  grid-template-areas: "big1 medium1 big2 small2"
                       "big1 small1 big2 medium2";
  justify-items: stretch;
}

.big1{
  grid-area: big1;
  height: 100%;
}

.medium1{
  grid-area: medium1;
  height: 240px;
}

.small1{
  grid-area: small1;
  height: 170px;
  align-self: end;
}

.big2{
  grid-area: big2;
  height: 100%;
}

.small2{
  grid-area: small2;
  height: 170px;
}

.medium2{
  grid-area: medium2;
  height: 240px;
  align-self: end;
}

.activity-card a{
  color: #000;
  margin: 0;
  padding: 0;
  text-decoration: none;
}

.activity-card{
  background-color: #FFF;
  border-radius: 1em;
  box-shadow: 0 0 1em #E9E9E9;
  width: 100%;
}

.pic-activity{
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
  height: 100%;
  object-fit: cover;
  width: 100%;
}

.big{
  height: 87%;
}

.medium{
  height: 180px;
}

.small{
  height: 110px;
}

.activity-card a span{
  padding: 1em;
  display: flex;
  align-items: center;
}

/***** Footer *****/
footer{
  background-color: #F2F2F2;
}

.info-footer{
  column-gap: 15%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.info-footer > div{
  display: flex;
  flex-direction: column;
  padding: 1em 1em 3em 1em;
}

.info-footer > div > span{
  padding: 1em 0;
}


/****** TABLETTE STYLE ******/
@media screen and (max-width: 992px){
  header{
    padding: 0 1.5em;
  }

  /* Filters */
  body > section{
    margin: 1.5em 0;
    padding: 0 1.5em;
  }

  /* Populars*/
  main > div{
    grid-template-areas: "populars"
                         "places";
    grid-template-columns: 1fr;
  }

  aside > a > div > img{
    width: 240px;
  }

  /* Activities */
  #activities{
    padding: 1.5em;
  }
}

/****** MOBILE STYLE ******/
@media screen and (max-width: 768px){

  /****** Header mobile *****/
  header{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, auto);
    grid-template-areas: "logo inscription" 
                         "nav nav";
    padding: 0;
  }

  header img{
    grid-area: logo;
    justify-self: start;
    max-height: 65px; 
    min-height: 60px;
    padding: 1em;
    width: auto;
  }

  header nav{
    grid-area: nav;
    display: flex;
    justify-content: stretch;
  }

  header nav a{
    border-top: none;
    padding-bottom: 2em;
    width: 50%;
  }

  header button{
    border-top: none;
    grid-area: inscription;
    justify-self: end;
  }
  
  header nav a:nth-child(1){
    border-bottom: solid 0.2em #0065FC;
    border-top: none;
  }
  
  header nav a:nth-child(2){
    border-bottom: solid 0.2em transparent;
    border-top: none;
  }
  
  header nav a:hover{
    border-bottom: solid 0.2em #0065FC;
  }

  /***** Filters mobile *****/
  body section{
    display: flex;
    justify-content: center;
  }

  body section > div{
    margin: 1em 0;
  }

  #search{
    justify-content: stretch;
    width: 100%;
  }

  #search input{
    min-width: 75%;
  }

  .search-text{
    display: none;
    overflow: hidden;
    visibility: hidden;
  }

  .search-icon{
    border-radius: 1em;
    right: 1em;
    position: relative;
    visibility: visible;
  }

  #filter-options > span{
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  #filter-options a{
    margin: 1em 1em 1em 0;
  }

  /***** MAIN CONTENT *****/
  main > div{
    grid-gap: 1em;
  }

  /* Aside: populars mobile */
  main > div{
    grid-template-areas: "populars"
                         "places";
    grid-template-columns: 1fr;
    justify-items: stretch;
  }

  aside > a > div > img{
    width: 130px;
  }

  /* Section: places*/
  #places{
    background-color: #FFF;
  }

  #places > div{
    flex-direction: column;
    margin: 0;
  }

  #places > div > a{
    margin: 1em 0;
  }

  #places > div > a > div img{
    width: 100%;
  }

  /* Section: activities */
  #block-activities{
    grid-gap: 1.5em;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(6, 210px);
    grid-template-areas: "big1" "medium1" "small1" 
                         "big2" "small2" "medium2";
  }

  .small, .medium, .big{
    height: 150px;
  }

  .small1, .small2, .medium1, .medium2, .big1, .big2{
    align-self: center;
    height: 210px;
  }

  /***** Footer *****/
  .info-footer{
    flex-direction: column;
  }

}

